<resources>
    <string name="app_name">JooWon</string>
    <string name="name">주원산업</string>
    <string name="name2">주원</string>
    <string name="exit_msg">한번 더 누르시면 종료 됩니다.</string>
    <string name="blank"></string>
    <string name="string_format" formatted="false">%s</string>
    <string name="network_Err">네트워크에러</string>
    <string name="session_Err">세션아웃</string>
    <string name="dialog_title">알림</string>
    <string name="signout">로그아웃</string>
    <string name="signout_msg">로그아웃하시겠습니까?</string>
    <string name="version">현재버전&#160;</string>


    <!--button-->
    <string name="btnConfirm">확인</string>
    <string name="btnCancel">취소</string>
    <string name="btnSearch">검색</string>
    <string name="btnRegistration">등록</string>
    <string name="btnDelete">삭제하기</string>

    <!--menu-->
    <string name="menu01">카메라</string>
    <string name="menu02">갤러리</string>

    <!--MainListActivity-->
    <string name="mainList_name">Name</string>
    <string name="mainList_join">Join</string>
    <string name="mainList_phone">Phone</string>
    <string name="mainList_balance">Balance</string>
    <!--    <string name="mainList_vacation">Vacation</string>-->
    <string name="mainList_search_hint">이름 또는 전화번호를 입력해주세요.</string>
    <string name="mainList_ph">P.H</string>
    <string name="mainList_vacation">남은휴가일수:&#160;</string>
    <string name="mainList_empty">검색결과가 없습니다.</string>


    <!--WorkerInsertActivity-->
    <string name="workerInsert_title">직원등록</string>
    <string name="workerInsert_name">이름</string>
    <string name="workerInsert_name2">이름을 입력해주세요.</string>
    <string name="workerInsert_join">입사 날짜</string>
    <string name="workerInsert_birth">생년월일</string>
    <string name="workerInsert_phone">핸드폰 번호</string>
    <string name="workerInsert_phone2">핸드폰 번호를 입력해주세요.</string>
    <string name="workerInsert_phone3">핸드폰 번호를 확인해주세요.</string>
    <string name="workerInsert_vacation">총 휴가일</string>
    <string name="workerInsert_vacation2">총 휴가일을 입력해주세요.</string>
    <string name="workerInsert_picture">프로필 설정</string>
    <string name="workerInsert_use">사용 휴가일</string>
    <string name="workerInsert_use2">사용 휴가일을 입력해주세요.</string>
    <string name="workerInsert_btn_register">등록하기</string>
    <string name="workerInsert_dialog_msg">직원등록을 완료했습니다.</string>

    <string name="workerUpdate_title">직원편집</string>
    <string name="workerUpdate_delete">삭제하기</string>
    <string name="workerUpdate_update">변경하기</string>
    <string name="workerUpdate_dialog_msg">직원정보 업데이트를 완료했습니다.</string>
    <string name="workerUpdate_delete_msg">%s님을 삭제하시겠습니까?</string>

    <!--PasswordCheckActivity-->
    <string name="pwcheck_text01">비밀번호를 입력해주세요.</string>
    <string name="pwcheck_text02">비밀번호가 일치하지 않습니다.\n다시 입력해주세요.</string>
    <string name="pwcheck_text_reset">비밀번호 초기화가 완료되었습니다.</string>

    <!--PasswordSettingActivity-->
    <string name="pwsetting_text01">사용하실 비밀번호를 입력해주세요.</string>
    <string name="pwsetting_text02">사용하실 비밀번호를 다시 한 번 입력해주세요.</string>
    <string name="pwsetting_text03">기존과 같은 비밀번호를 사용할 수 없습니다.\n다시 입력해주세요.</string>
    <string name="pwsetting_text_complete">비밀번호 설정이 완료되었습니다.</string>
    <string name="pwsetting_text_inconsistency">입력하신 비밀번호와 일치하지 않습니다.</string>
    <string name="pwsetting_text_confirm">기존의 비밀번호를 입력해주세요.</string>
    <string name="pwsetting_text_cInconsistency">비밀번호가 일치하지 않습니다.</string>

    <!--SettingResetActivity-->
    <string name="reset_title">초기화</string>
    <string name="reset_password">비밀번호 초기화</string>
    <string name="reset_data">데이터 초기화</string>
    <string name="reset_msg">비밀번호 초기화가 완료되었습니다.</string>

    <!--SettingActivity-->
    <string name="setting_title">환경설정</string>
    <string name="setting_version">앱 정보</string>
    <string name="setting_cur_version">현재 버전</string>
    <string name="setting_new_version">최신 버전</string>
    <string name="setting_development">제작</string>
    <string name="setting_password">비밀번호 설정</string>
    <string name="setting_password_reset">비밀번호 초기화</string>
    <string name="setting_excel">엑셀로 내보내기</string>
    <string name="setting_excel2">엑셀 가져오기</string>
    <string name="setting_reset">초기화</string>

    <!--ListWorkerMainFragment-->
    <string name="list_worker_main">등록된 연/월차가 없습니다.</string>


    <!--WorkerVacationActivity-->
    <string name="vacation_title">휴가등록</string>
    <string name="vacation_start_date">휴가 시작 기간</string>
    <string name="vacation_end_date">휴가 마지막 기간</string>
    <string name="vacation_content">휴가내용</string>
    <string name="vacation_content2">연/월차 사용</string>
    <string name="vacation_content_cnt">%s / 40</string>
    <string name="vacation_nothing">검색 결과가 없습니다.</string>
    <string name="vacation_use_vacation">사용 예정 휴가 일수: %s 개</string>
    <string name="vacation_hint">이름/휴대폰번호를 입력해주세요.</string>
    <string name="vacation_hint2">휴가 내용을 입력해주세요.</string>
    <string name="vacation_dialog_msg">휴가가 등록되었습니다.</string>
    <string name="vacation_dialog_msg2">이미 등록된 휴가입니다.</string>
    <string name="vacation_dialog_msg3">휴가 시작 날짜 이후로 선택해주세요.</string>
    <string name="vacation_dialog_msg4">휴가 날짜를 확인해주세요.</string>
    <string name="vacation_dialog_err">휴가가 등록을 실패하였습니다.\n이미 등록된 휴가가 있는지 확인해주세요.</string>
    <string name="vacation_date">사용일자</string>
    <string name="vacation_use_cnt">근태일수</string>
    <string name="vacation_half">반차</string>
    <string name="vacation_no">No.</string>
    <string name="vacation_add">추가</string>
    <string name="vacation_btn">총 %s일 휴가등록</string>

    <string name="vacation_delete_title">휴가정보</string>
    <string name="vacation_delete_cnt"><b>근태일수:&#160;</b></string>
    <string name="vacation_delete_date"><b>휴가날짜:&#160;</b></string>
    <string name="vacation_delete_content"><b>휴가내용:&#160;</b></string>
    <string name="vacation_delete_dialog_msg">휴가가 삭제되었습니다.</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_signup">Signup</string>


    <!--SignUpActivity-->
    <string name="signup_title">회원가입</string>
    <string name="signup_name">이름</string>
    <string name="signup_email">이메일</string>
    <string name="signup_pw">비밀번호</string>
    <string name="signup_pw2">비밀번호 재입력</string>
    <string name="signup_email_hint">이메일을 입력해주세요.</string>
    <string name="signup_pw_hint">영문, 숫자, 특수문자 조합으로 입력해주세요.</string>
    <string name="signup_pw2_hint">비밀번호를 다시 한번 입력해주세요.</string>
    <string name="signup_email_err">이메일 형식으로 입력해주세요.</string>
    <string name="signup_email_confirm">사용가능한 이메일입니다.</string>
    <string name="signup_password_err1">8자리 이상 입력해주세요.</string>
    <string name="signup_password_err2">영문, 숫자, 특수문자 조합으로 입력해주세요.</string>
    <string name="signup_password_err3">같은문자를 4자리이상 입력할 수 없습니다.</string>
    <string name="signup_password_err4">비밀번호가 일치하지 않습니다.</string>
    <string name="signup_btn_email_overlap">중복확인</string>
    <string name="signup_btn_signup">가입하기</string>

    <!-- SignInActivity-->
    <string name="signin_title">로그인</string>
    <string name="signin_email_tv">이메일입력</string>
    <string name="signin_email">이메일</string>
    <string name="signin_pw_tv">비밀번호입력</string>
    <string name="signin_pw_tv2">비밀번호확인</string>
    <string name="signin_pw">비밀번호</string>
    <string name="signin_auto_signin">자동로그인</string>
    <string name="signin_dialog_msg_email_registration">이미 등록된 이메일입니다. 네이버아이디로 연동하시겠습니까?</string>
    <string name="signin_dialog_msg_email_registration2">등록되지 않은 이메일입니다. 회원가입하시겠습니까?</string>
    <string name="signin_dialog_mst_sns_registration">네이버아이디로 연동된 이메일입니다. 네이버아이디로 로그인...?</string>
    <string name="signin_email_hint">이메일을 입력해주세요.</string>
    <string name="signin_pw_hint">비밀번호를 입력해주세요.</string>
    <string name="signin_find_pw">비밀번호찾기</string>
    <string name="signin_sign_up">회원가입</string>
    <string name="signin_err">비밀번호를 확인해주세요.</string>
    <string name="signin_err2">다시 로그인해 주시기 바랍니다.</string>
    <string name="signin_btn_continue">계속하기</string>
    <string name="signin_sns">간편로그인</string>

    <string name="calendar_content_basic">날짜를 선택해주세요.</string>
    <string name="calendar_content_multi">날짜를 선택해주세요. (다중선택가능)</string>
    <string name="calendar_content_ranges">길게 눌러 날짜 범위를 선택해주세요.</string>

</resources>
